--- a/Crab/game.html
+++ b/Crab/game.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Script -->
+    <script src="Crab.js"></script>
+    <script src="Rock.js"></script>
+    <script src="Zone.js"></script>
     <script src="game.js"></script>
 
     <!-- Font -->
@@ -31,7 +34,7 @@
     <main>
 
         <section class="game">
-            <canvas id="canvas" class="canvas" width="1500" height="750">
+            <canvas id="canvas" class="canvas" tabindex='1'>
             </canvas>
         </section>
 
