--- a/Crab/game.html
+++ b/Crab/game.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Script -->
+    <script src="Maths.js"></script>
     <script src="Clothing.js"></script>
     <script src="Crab.js"></script>
     <script src="Seagull.js"></script>
