--- a/Crab/game.html
+++ b/Crab/game.html
@@ -23,10 +23,11 @@
     <!-- Script -->
     <script src="Maths.js"></script>
     <script src="Clothing.js"></script>
-    <script src="Crab.js"></script>
-    <script src="Seagull.js"></script>
     <script src="Rock.js"></script>
     <script src="Zone.js"></script>
+    <script src="Crab.js"></script>
+    <script src="CrabBot.js"></script>
+    <script src="Seagull.js"></script>
     <script src="game.js"></script>
 
     <!-- Font -->
