--- a/Crab/game.html
+++ b/Crab/game.html
@@ -23,6 +23,7 @@
     <!-- Script -->
     <script src="Maths.js"></script>
     <script src="Clothing.js"></script>
+    <script src="Button.js"></script>
     <script src="Crab.js"></script>
     <script src="Seagull.js"></script>
     <script src="Rock.js"></script>
