--- a/Crab/game.html
+++ b/Crab/game.html
@@ -39,6 +39,7 @@
     <main>
 
         <section class="game">
+            <div id="load"></div>
             <canvas id="canvas" class="canvas" tabindex='1'>
             </canvas>
         </section>
